--- a/src/less/code.less
+++ b/src/less/code.less
@@ -33,7 +33,7 @@ p > code {
   display: inline;
   overflow-y: visible !important;
   width: fit-content;
-  font-size: 13px !important;
+  font-size: 15px !important;
 }
 
 code {
@@ -45,20 +45,22 @@ code {
 .language-python,
 .python.hljs {
   display: block;
-  overflow-y: scroll !important;
-  overflow-x: hidden !important;
-  /*padding: 1em 1.5em;*/
-  color: #166c8b;
-  background: #f1f5f8 !important;
+  overflow-y: scroll!important;
+  overflow-x: hidden!important;
+  color: #e4f8fd;
+  background: #3d3e40!important;
   overflow-wrap: break-word;
+  font-family: "anonymous-pro", monospace, serif;
   margin: 0;
-  font-size: 14px;
-  white-space: pre-wrap !important;
-  border-left: 5px solid #ccd4da;
+  font-size: 15px;
+  font-weight: 200;
+  line-height: 1.7;
+  white-space: pre-wrap!important;
+  border-left: 5px solid #0f0f10;
 
 
   * {
-    font-size: 13px;
+    font-size: 15px;
   }
   @media(max-width: 600px) {
     font-size: 13px;
@@ -72,7 +74,7 @@ code {
 code {
   padding: 5px;
   background: #f1f5f8;
-  font-size: 13px;
+  font-size: 15px;
   color: #2e9eb7;
   margin: 0 5px;
 }
