--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -295,6 +295,7 @@
 			border-bottom: 1px dashed @border-color;
 			padding-bottom: 14px;
 			margin-bottom: 14px;
+			line-height: 1.4;
 
 			img {
 				vertical-align: middle;
@@ -323,6 +324,7 @@
 				color: @text-color-light;
 				font-size: 12px;
 				opacity: 0.8;
+				margin-top: 10px;
 
 				i {
 					margin-right: 5px;
