--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -250,9 +250,9 @@
 
   h2 {
     line-height: 1;
-    font-size: 1.5em;
+    font-size: 1.4em;
     margin: 0;
-    font-weight: 600;
+    font-family: 'AvenirNextLTPro-Regular',sans-serif;
     height: fit-content;
     text-align: left;
   }
