--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -117,7 +117,9 @@
 				.single-author-name {
 					color: @white;
 					font-size: 18px;
-					    margin: 0;
+					margin: 0;
+					line-height: 1.4;
+					font-family: 'AvenirNextLTPro-Light', sans-serif;
 
 					img {
 						height:20px;
@@ -135,8 +137,9 @@
 					color: @white;
 					opacity: 0.5;
 					font-size: 0.9em;
-    			margin-top: 5px;
-					font-family: akzidenz,sans-serif;
+					margin-top: 9px;
+					font-weight: 200;
+					font-family: 'AvenirNextLTPro-Light', sans-serif;
 
 					a {
 						color: @white;
