--- a/src/less/post.less
+++ b/src/less/post.less
@@ -41,7 +41,7 @@
 		}
 
 		@media(max-width: 600px) {
-			font-size: 1.8em;
+			font-size: 2em;
 		}
 
 		a {
@@ -517,7 +517,7 @@
 				text-align: center;
 				word-wrap: break-word;
 				padding: 10px;
-				border-right: 1px solid #cdd1d6;
+				border-right: 1px solid #e3e8ef;
 				@media(max-width: 800px) {
 					padding: 7px 15px;
 					overflow-x: hidden;
@@ -532,7 +532,7 @@
 
 			td {
 				border-style: none;
-				border-right: 1px solid #cdd1d6;
+				border-right: 1px solid #e3e8ef;
 				border-left: 0;
 				line-height: 1.3;
 
@@ -550,7 +550,7 @@
 				border-style: none;
 				line-height: 1.2;
 				font-family: 'sofia-pro';
-				 border-right: 1px solid #cdd1d6;
+				 border-right: 1px solid #e3e8ef;
 
 				 &:last-of-type {
  					border-right: none;
@@ -560,7 +560,8 @@
 					  max-width: 60px;
 						width: 106px;
 						padding: 10px 4px;
-						border-right: 1px solid #cdd1d6;
+						border-right: 1px solid #e3e8ef;
+
 				}
 				@media(max-width: 600px) {
 					font-size: 14px;
@@ -601,7 +602,7 @@
 		margin: 0 80px;
 		/*border-bottom: 1px solid #eaeaea;*/
 		@media(max-width: 800px) {
-			margin: 0 15px;
+			margin: 0 10px 0 15px;
 			border-bottom: 0;
 		}
 	}
