--- a/src/less/post.less
+++ b/src/less/post.less
@@ -63,10 +63,10 @@
 		line-height: 1.2;
 
 		@media(max-width: 800px) {
-			margin: 20px auto 0;
-			font-size: 1.1em;
+			margin: 15px auto 0;
+			font-size: 1em;
 			text-align: center;
-			line-height: 1.1;
+			line-height: 1.2;
 			max-width: 90%;
 			font-family: AvenirNextLTPro-Regular,serif;
 			font-weight: 600;
@@ -198,7 +198,7 @@
 			}
 
 			@media(max-width: 600px) {
-				font-size: 1.2em;
+				font-size: 1em;
 			}
 
 			&.desktop {
@@ -602,7 +602,8 @@
 		margin: 0 80px;
 		/*border-bottom: 1px solid #eaeaea;*/
 		@media(max-width: 800px) {
-			margin: 0 10px 0 15px;
+			margin: 0 15px 0 15px;
+			padding: 20px 0 30px;
 			border-bottom: 0;
 		}
 	}
