--- a/partials/widget-tagcloud.hbs
+++ b/partials/widget-tagcloud.hbs
@@ -2,7 +2,7 @@
 <div class="widget">
 	<h4 class="title">Tags</h4>
 	<div class="content tag-cloud">
-		{{#get "tags" limit="all" filter="slug:-[roundup,machine-learning,django,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" include="count.posts" order="count.posts DESC" }}{{tags separator="" }}
+		{{#get "tags" limit="all" filter="slug:-[roundup,machine-learning,django,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" include="count.posts" order="count.posts DESC" }}
 			{{#foreach tags}}
 				<a href="{{url}}">{{name}}</a>
 			{{/foreach}}
