--- a/src/less/global.less
+++ b/src/less/global.less
@@ -29,7 +29,8 @@ article {
 }
 
 strong {
-	font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
+	font-family: AvenirNextLTPro-Regular,AvenirNextLTPro-Light;
+  font-weight: 900;
 }
 
 .row {
