--- a/src/less/post.less
+++ b/src/less/post.less
@@ -90,7 +90,7 @@
 	h3 {
 		font-size: 1.5em;
 		line-height: 1.2;
-		color: @text-post-header;
+		color: #365c8e;
 		font-weight: 600;
 		margin-bottom: 10px;
 	}
