--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -140,7 +140,7 @@
 		    background-size: cover!important;
 		    margin-right: 10px;
 		    min-width: 50px;
-		    border-radius: 50%;
+		    border-radius: 2px;
 
 				@media(max-width: 1000px) {
 					display: none;
