--- a/src/less/code.less
+++ b/src/less/code.less
@@ -33,7 +33,7 @@ p > code {
   display: inline;
   overflow-y: visible !important;
   width: fit-content;
-  font-size: 15px !important;
+  font-size: 13px !important;
 }
 
 code {
@@ -48,19 +48,23 @@ code {
   overflow-y: scroll!important;
   overflow-x: hidden!important;
   color: #e4f8fd;
-  background: #3d3e40!important;
+  background: #323335 !important;
   overflow-wrap: break-word;
   font-family: "anonymous-pro", monospace, serif;
   margin: 0;
   font-size: 15px;
   font-weight: 200;
-  line-height: 1.7;
+  line-height: 2;
   white-space: pre-wrap!important;
   border-left: 5px solid #0f0f10;
 
 
   * {
     font-size: 15px;
+
+    @media(max-width: 600px) {
+      font-size: 14px;
+    }
   }
   @media(max-width: 600px) {
     font-size: 14px;
