--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -48,13 +48,13 @@
 
 	.btn {
 		max-width: 39%;
-		line-height: 1.5;
-		font-size: 1em;
-		font-family: 'sofia-pro';
-		font-weight: 400;
+		line-height: 1.3;
+		font-size: 14em;
+		font-family: sofia-pro;
+		font-weight: 300;
 
 		@media(max-width: 800px){
-			font-size: 1em;
+			font-size: .9em;
 		}
 	}
 }
