--- a/src/less/post.less
+++ b/src/less/post.less
@@ -149,7 +149,7 @@
 		}
 
 		.tags {
-			 padding: 5px;
+			 padding: 5px 10px;
 			 height: 25px;
 
 			 &.codesnippetcorner {
@@ -263,7 +263,7 @@
 
 
 			&.readtime {
-					@media(max-width: 600px){
+					@media(max-width: 850px){
 						display: none;
 					}
 			}
@@ -384,6 +384,10 @@
 			text-align: center;
 		}
 
+		table.centered thead tr th {
+    	max-width: 29px;
+		}
+
 		tr {
 			border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 		}
@@ -436,8 +440,16 @@
 		table.responsive-table thead {
 			display: block;
 			float: left;
-
 			box-shadow: 0 0 20px #9090a9;
+
+			@media (max-width: 600px) {
+			tr th {
+						width: 106px;
+						padding: 10px 4px;
+						border-right: 1px solid #e3e8ef;
+				}
+
+			}
 		}
 
 		table.responsive-table thead tr {
@@ -550,6 +562,10 @@
 				border-left: 0;
 				line-height: 1.3;
 
+				@media(max-width: 600px) {
+					    font-size: .9em;
+				}
+
 				&:last-of-type {
 					border-right: none;
 				}
@@ -570,13 +586,7 @@
  					border-right: none;
  				}
 
-				&:first-of-type{
-					  max-width: 60px;
-						width: 106px;
-						padding: 10px 4px;
-						border-right: 1px solid #e3e8ef;
 
-				}
 				@media(max-width: 600px) {
 					font-size: 14px;
 					font-weight: 800;
