--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -17,6 +17,13 @@
 }
 
 .page-about {
+
+  .post-content {
+    @media(max-width: 800px) {
+      margin: -14px 30px 0;
+    }
+
+  }
   h1 {
     @media(max-width: 1040px) {
           margin: 40px 30px 10px !important;
@@ -24,6 +31,7 @@
 
     @media(max-width: 600px) {
       font-size: 3em;
+      display:none;
     }
   }
 
