--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -26,7 +26,7 @@
 
 	.widget {
 		padding: 10px 0;
-		width:27%;
+		width:28%;
 		margin:0;
 
 		.post-title {
@@ -116,10 +116,10 @@
 				.post-title,
 				.single-author-name {
 					color: @white;
-					font-size: 18px;
+					font-size: 17px;
 					margin: 0;
 					line-height: 1.4;
-					font-family: 'AvenirNextLTPro-Light', sans-serif;
+					font-family: 'AvenirNextLTPro-Regular', sans-serif;
 
 					img {
 						height:20px;
