more post tweaks

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -148,6 +148,10 @@
 			padding-bottom: 10px;
 		}
 
+		span {
+			 font-family: AvenirNextLTPro-Regular;
+		}
+
 		.tags {
 			 padding: 5px 10px;
 			 height: 25px;
@@ -227,11 +231,6 @@
 				@media(max-width: 600px) {
 					display:flex;
 				}
-			}
-
-			span {
-				font-weight: 621!important;
-    		font-family: AvenirNextLTPro-Light,sans-serif!important;
 			}
 
 			i {
