--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -17,7 +17,7 @@
 							</div>
 						{{/if}}
 						<h1 class="post-title">{{{title}}}</h1>
-						<div class="post-content">
+						<div class="about-content">
 							{{content}}
 						</div>
 						<div class="author-container">
