--- a/src/less/code.less
+++ b/src/less/code.less
@@ -54,7 +54,7 @@ code {
   margin: 0;
   font-size: 15px;
   font-weight: 200;
-  line-height: 2;
+  line-height: 1.6;
   white-space: pre-wrap!important;
   border-left: 5px solid #0f0f10;
 
@@ -76,11 +76,11 @@ code {
 }
 
 code {
-  padding: 5px;
+  padding: 4px 5px;
   background: #f1f5f8;
   font-size: 15px;
   color: #2e9eb7;
-  margin: 0 5px;
+  margin: 0;
 }
 
 .hljs-comment,
