--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -29,7 +29,7 @@
 		width:28%;
 		margin:0;
 
-		.post-title {
+		.about-title {
 			margin:0;
 		}
 
@@ -116,10 +116,11 @@
 				.post-title,
 				.single-author-name {
 					color: @white;
-					font-size: 17px;
+					font-size: 16px;
 					margin: 0;
 					line-height: 1.4;
-					font-family: 'AvenirNextLTPro-Regular', sans-serif;
+					font-family: AvenirNextLTPro-Regular,sans-serif !important;
+					font-weight: 500;
 
 					img {
 						height:20px;
