--- a/src/less/post.less
+++ b/src/less/post.less
@@ -38,9 +38,7 @@
 			text-align: center !important;
 			font-weight: 700;
 		}
-		@media(max-width: 600px) {
-			font-size: 1.5em;
-		}
+
 
 		a {
 			color: @text-color-heading;
@@ -66,6 +64,11 @@
 			max-width: 90%;
 			font-family: AvenirNextLTPro-Regular,serif;
 			font-weight: 600;
+		}
+
+		@media(max-width: 600px) {
+			font-size: 1.2em;
+				line-height: 1.3;
 		}
 	}
 
@@ -95,7 +98,7 @@
 		text-align: justify;
 		font-size: 1em;
 		line-height: 1.7;
-		 
+
 	}
 
 	blockquote {
@@ -517,7 +520,7 @@
 			@media(max-width: 600px) {
 				margin-left: calc(~"-50vw + 50%") !important;
 				margin-right: calc(~"-50vw + 50%") !important;
-				width: 114%;
+				width: 120%;
 			}
 
 			thead th {
@@ -712,6 +715,11 @@
 			padding: 0;
 			height: 0;
 			line-height: 4;
+			padding-top: 30px;
+			line-height: 1.75;
+    	width: 90%;
+    	/* overflow: hidden; */
+    	display: block;
 		}
 	}
 
@@ -875,7 +883,8 @@
 				margin-left: calc(~"-50vw + 50%");
 				margin-right: calc(~"-50vw + 50%");
 				width: auto !important;
-				box-shadow: 0 0 15px #dcdcdc;
+				margin-top: 0;
+				margin-bottom: 0;
 
 				img {
 					width: 100%;
@@ -885,6 +894,12 @@
 					border-left: 0;
 					border-right: 0;
 				}
+			}
+		}
+
+		.material-placeholder {
+			@media(max-width: 600px) {
+				box-shadow: 0 0 15px #dcdcdc;
 			}
 		}
 
@@ -952,11 +967,11 @@
 		.bio {
 			display: block;
 			line-height: 1.5;
-			margin-top: 10px;
+			margin-top: 20px;
 			font-weight: 100;
 			width: 100%;
 			clear: both;
-			font-size: 16px;
+			font-size: 15px;
 		}
 
 		.author {
