--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -53,14 +53,14 @@
 
   .welcomevideo,
   iframe {
-    margin: 0 auto 25px!important;
+    margin: 0 0 25px!important;
     height: 400px;
-    width: 92%;
+
     display: block;
 
     @media(max-width: 800px) {
       width: 100%;
-      margin: -12px 0 40px 0!important;
+      margin: -12px auto 40px 0!important;
     }
 
     @media(max-width: 600px) {
