--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -192,6 +192,10 @@
 			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 			font-weight: 100;
 
+			a {
+				margin: 0 !important;
+			}
+
 			&:hover {
 				color: @hover-color;
 			}
@@ -295,7 +299,7 @@
 			border-bottom: 1px dashed @border-color;
 			padding-bottom: 14px;
 			margin-bottom: 14px;
-			line-height: 1.4;
+			line-height: 1.35;
 
 			img {
 				vertical-align: middle;
