--- a/src/less/code.less
+++ b/src/less/code.less
@@ -47,7 +47,7 @@ code {
   display: block;
   overflow-y: scroll!important;
   overflow-x: hidden!important;
-  color: #e4f8fd;
+  color: #e4f8fd !important;
   background: #323335 !important;
   overflow-wrap: break-word;
   font-family: "anonymous-pro", monospace, serif;
@@ -85,7 +85,7 @@ code {
 
 .hljs-comment,
 .hljs-quote {
-  color: #b5bac4;
+  color: #6a6c6f;
 }
 
 .hljs-doctag,
@@ -112,7 +112,7 @@ code {
 .hljs-meta-string,
 .hljs-regexp,
 .hljs-string {
-  color: #47989a !important;
+  color: #61c7cc !important;
   font-size: 13px;
 }
 
