--- a/partials/widget-sendgrid.hbs
+++ b/partials/widget-sendgrid.hbs
@@ -1,6 +1,6 @@
 <div class="widget">
     <h4 class="title">{{t "Newsletter"}}</h4>
-	 <div class="content newsletter input-group">
+	 <div class="newsletter input-group">
     {{#if @labs.subscribers}}
       <section class="gh-subscribe">
         {{subscribe_form placeholder="Your email address"}}
