--- a/partials/widget-tagcloud.hbs
+++ b/partials/widget-tagcloud.hbs
@@ -1,7 +1,7 @@
 <!-- start tag cloud widget -->
 <div class="widget">
 	<h4 class="title">Tags</h4>
-	<div class="content tag-cloud">
+	<div class="tag-cloud">
 		{{#get "tags" limit="all" filter="slug:-[roundup,machine-learning,django,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" include="count.posts" order="count.posts DESC" }}
 			{{#foreach tags}}
 				<a href="{{url}}">{{name}}</a>
