--- a/src/less/code.less
+++ b/src/less/code.less
@@ -4,6 +4,8 @@ pre {
   position: relative;
   overflow-y: hidden;
   padding: 0 !important;
+  margin-top: 30px;
+  margin-bottom: 30px;
 
   @media(max-width: 600px) {
     margin-left: calc(~"-50vw + 50%") !important;
