--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -1,7 +1,7 @@
 <!-- start widget -->
 <div class="widget text">
 	<h1 class="title" style="font-size: 1.5em;">Hackers And Slackers</h4>
-	<div class="content">
+	<div>
 		<p>{{@blog.description}}</p>
 	 </div>
 </div>
