--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -1,6 +1,6 @@
 <!-- start widget -->
 <div class="widget" style="order:10">
-	<div class="content twitter">
+	<div class="twitter">
 		<h4 class="title">Twitter</h4>
 			<a class="twitter-timeline" data-chrome="nofooter noheader noscrollbar" data-tweet-limit="5" data-link-color="#26a2c7" href="https://twitter.com/HackersSlackers?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
