--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -67,6 +67,8 @@
       width: 100%;
       height: 360px;
       margin: -12px 0 40px 0!important;
+      position: absolute;
+      top: -7px;
     }
 
     @media(max-width: 470px) {
