--- a/src/less/post.less
+++ b/src/less/post.less
@@ -83,6 +83,7 @@
 		font-weight: 300 !important;
 		@media(max-width: 800px) {
 			font-size: 1.9em;
+			padding-bottom: 5px;
 		}
 	}
 
@@ -815,6 +816,7 @@
 			li {
 				padding: 5px;
 				font-size: 16px;
+				line-height: 1;
 			}
 		}
 
