more sexy styles

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -63,6 +63,7 @@ code {
 
   * {
     font-size: 15px;
+    font-family: "anonymous-pro", monospace, serif;
 
     @media(max-width: 600px) {
       font-size: 14px;
