--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -24,6 +24,7 @@
 @import 'kanban.less';
 @import 'social.less';
 @import 'swiper.less';
+@import url("https://use.typekit.net/tui1riy.css");
 /*====================================================
 	about author and comment and next-prev link
 ====================================================*/
